Fix RSS icon to be clickable on mobile & add better font fallbacks

--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -56,5 +56,5 @@ $silver          : #CCCCCC;
 
 /////////////////////////////////////////////////////////////////////////
 // Fonts
-$open-sans:      'Open Sans', sans-serif;
-$josefin-sans:   'Josefin Sans', sans-serif;
+$open-sans:      'Open Sans', Helvetica, Arial, sans-serif;
+$josefin-sans:   'Josefin Sans', Helvetica, Arial, sans-serif;
